Fix item completed background and checkmark not showing properly

--- a/src/components/ToDo/ToDo.scss
+++ b/src/components/ToDo/ToDo.scss
@@ -23,77 +23,77 @@
       transform: scale(1.02);
     }
   }
+}
 
-  .todoList {
-    background-color: var(--clr-item-bg);
-    border-radius: var(--br-sm);
+.todoList {
+  background-color: var(--clr-item-bg);
+  border-radius: var(--br-sm);
 
-    .listItem {
-      display: flex;
-      align-items: center;
-      gap: 24px;
-      border-bottom: 1px solid var(--clr-borders);
+  .listItem {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    border-bottom: 1px solid var(--clr-borders);
 
-      & :is(&__item, .completeItem__btn, &__delete):hover {
-        cursor: pointer;
-      }
+    & :is(&__item, .completeItem--btn, &__delete):hover {
+      cursor: pointer;
+    }
 
-      &:hover :last-child.listItem__delete {
-        display: block;
-      }
+    &:hover :last-child.listItem__delete {
+      display: block;
+    }
 
-      .completeItem {
-        position: relative;
-        & :hover,
-        & :focus {
-          outline: none;
-          border: 1px solid var(--clr-check-background-purple);
-        }
+    &__delete {
+      display: none;
+      justify-content: flex-end;
+    }
 
-        &--btn {
-          background-color: transparent;
-          border-radius: 50%;
-          border: 1px solid var(--clr-borders);
-          width: 1.86em;
-          height: 1.86em;
-        }
-
-        &__checkMark {
-          transform: scale(0);
-          pointer-events: none;
-          z-index: 1;
-          position: absolute;
-          bottom: 7px;
-          right: 7px;
-
-          &--showBackground {
-            border: none;
-            background: linear-gradient(
-              130deg,
-              var(--clr-check-background-blue) 0%,
-              var(--clr-check-background-purple) 100%
-            );
-          }
-
-          &--showCheckMark {
-            transform: scale(1);
-          }
-        }
-      }
-
-      &__delete {
-        display: none;
-        justify-content: flex-end;
-      }
-
-      &__item {
-        flex: 1;
-
-        &--complete {
-          color: var(--clr-completed-item);
-          text-decoration: line-through;
-        }
-      }
+    &__item {
+      flex: 1;
     }
   }
+}
+
+.completeItem {
+  position: relative;
+  & :hover,
+  & :focus {
+    outline: none;
+    border: 1px solid var(--clr-check-background-purple);
+  }
+
+  &--btn {
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--clr-borders);
+    width: 1.86em;
+    height: 1.86em;
+  }
+
+  &__checkMark {
+    transform: scale(0);
+    pointer-events: none;
+    z-index: 1;
+    position: absolute;
+    bottom: 7px;
+    right: 7px;
+  }
+}
+
+.showBackground {
+  border: none;
+  background: linear-gradient(
+    130deg,
+    var(--clr-check-background-blue) 0%,
+    var(--clr-check-background-purple) 100%
+  );
+}
+
+.complete {
+  color: var(--clr-completed-item);
+  text-decoration: line-through;
+}
+
+.showCheckMark {
+  transform: scale(1);
 }
